testsuite/tests/parser/should_fail/T3811.hs

module T3811 where

f x :: Char
f x = 'c'
