testsuite/tests/parser/should_fail/T3811.stderr

T3811.hs:4:1: error: [GHC-94426]
    Invalid type signature: f x :: ...
    Suggested fix:
      A type signature should be of form <variables> :: <type>
